# ugdr

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Makefile
.agents/skills/lark-account-registry/: SKILL.md
.agents/skills/ugdr-continue-project/: SKILL.md
.agents/skills/ugdr-fill-feature-doc/: SKILL.md
.agents/skills/ugdr-fill-step-doc/: SKILL.md
.agents/skills/ugdr-fill-version-doc/: SKILL.md
.agents/skills/ugdr-sync-docs-to-md/: SKILL.md
.lark/: .gitignore  registry.json
.lark/accounts/: ugdr-bot.json
.lark/templates/: account.example.json  account.schema.json  profiles.example.json
apps/client/: main.cpp
apps/daemon/: main.cpp
benchmarks/: CMakeLists.txt  loop_worker_payload_benchmark.cpp  persistent_copy_benchmark.cpp  queue_metadata_benchmark.cpp  shared_ring_benchmark.cpp  wr_posting_benchmark.cpp
doc/: api.md
docs/architecture/: repository-skeleton.md
docs/contracts/: README.md  libibverbs-alignment.md  object-lifecycle.md  public-api.md  rc-qp-state-machine.md  wr-wc-semantics.md
docs/decisions/: 0001-advance-completed-scope.md  0002-strict-object-lifecycle.md  0003-atomic-rc-connect-helper.md  0004-reviewed-roadmap-next-actions.md  README.md
docs/governance/: document-policy.json
docs/progress/: F01-S02.md  F01-S03.md  F01-S04.md  F01-S05.md  F01-S06.md  F02-S01.md  F02-S02.md  F02-S03.md  F02-S04.md  F02-S05.md  F03-S01.md  F03-S02.md  F03-S03.md  F03-S04.md  F03-S05.md  F03-S06.md  F04-S01.md  F04-S02.md  F04-S03.md  F04-S04.md  F04-S05.md  F05-S01.md  F05-S02.md  F06-S01.md  README.md
docs/status/: current.json  current.schema.json  roadmap.json  roadmap.schema.json
docs/v1_docs/: README.md  UGDR_v1_版本文档.md
docs/v1_docs/F01_项目初始化与开发_Harness/: F01-S01_仓库骨架与模块依赖边界_步骤文档.md  F01-S02_项目文档、状态与进度交接体系_步骤文档.md  F01-S03_Bootstrap_与环境诊断_步骤文档.md  F01-S04_统一质量命令与基础门禁_步骤文档.md  F01-S05_Agent_协作工作流与自动编排_步骤文档.md  F01-S06_干净_workspace_与新_Agent_会话验收_步骤文档.md  F01_项目初始化与开发_Harness_功能文档.md
docs/v1_docs/F02_API_契约与对象模型/: F02-S01_v1_公开_API_表面与对齐基线_步骤文档.md  F02-S02_对象模型与生命周期契约_步骤文档.md  F02-S03_RC_QP_建连与状态机契约_步骤文档.md  F02-S04_WR_WC_与完成语义契约_步骤文档.md  F02-S05_契约集成、占位入口与验证_Harness_步骤文档.md  F02_API_契约与对象模型_功能文档.md
docs/v1_docs/F03_Daemon_控制面与对象生命周期/: F03-S01_IPC_协议与_session_生命周期_步骤文档.md  F03-S02_类型化_generation_handle_注册表与_Context_步骤文档.md  F03-S03_PD、MR、CQ_元数据与严格生命周期_步骤文档.md  F03-S04_QP、SQ、RQ_所有权与_CQ_关联_步骤文档.md  F03-S05_QP_查询、状态转换与原子建连_步骤文档.md  F03-S06_公开_API_集成与控制面验收_步骤文档.md  F03_Daemon_控制面与对象生命周期_功能文档.md
docs/v1_docs/F04_SQ、RQ、CQ_队列系统/: F04-S01_共享队列与映射边界_步骤文档.md  F04-S02_SQ、RQ_posting_快路径_步骤文档.md  F04-S03_CQ_生产与_polling_快路径_步骤文档.md  F04-S04_Mock_Worker_与_completion_步骤文档.md  F04-S05_公开_API_集成与性能观测_步骤文档.md  F04_SQ、RQ、CQ_队列系统_功能文档.md
docs/v1_docs/F05_Loop_Worker_与本地_Datagram_数据路径/: F05-S01_逻辑_Datagram_与_Local_Transport_步骤文档.md  F05-S02_Loop_Worker_API_串联与_Mock_backend_闭环_步骤文档.md  F05_Loop_Worker_与本地_Datagram_数据路径_功能文档.md
docs/v1_docs/F06_Persistent_GPU_Kernel_与真实_GPU_Copy/: F06-S01_Payload_拆分、完成聚合与_F05_全链路性能_Harness_步骤文档.md  F06-S02_Persistent_Kernel_模型实验与选型_步骤文档.md  F06_Persistent_GPU_Kernel_与真实_GPU_Copy_功能文档.md
include/: ugdr.h
include/ugdr/: api.hpp
src/api/: api.cpp  wr_posting.cpp  wr_posting.hpp
src/common/: logger.h  ugdr_types.h
src/common/ipc/: ipc_proto.h  locking_shmring.h  shm.cpp  shm.h  shm_ring.cpp  (+3 more)
src/control/: control.cpp  control.hpp  device_context.cpp  device_context.hpp  ipc_adapter.cpp  ipc_adapter.hpp  object_identity.cpp  object_identity.hpp  object_registry.hpp  pd_mr_cq.cpp  pd_mr_cq.hpp  qp.cpp  qp.hpp  queue_descriptor.hpp
src/daemon/: Makefile  main.cpp
src/gpu/: cuda_ipc_memory.cu  cuda_ipc_memory.hpp  gpu.cu  gpu.hpp  persistent_copy.cu  persistent_copy.hpp
src/ipc/: client.cpp  ipc.hpp  protocol.cpp  server.cpp
src/libugdr/: Makefile  api.cpp  ipc_client.cpp  ipc_client.h  ugdr_internal.h
src/queue/: completion_queue.cpp  completion_queue.hpp  descriptors.hpp  shared_ring.cpp  shared_ring.hpp
src/worker/: local_transport.cpp  local_transport.hpp  worker.cpp  worker.hpp
tests/: Makefile  __init__.py  connection_test.cpp  ipc_shmem.cpp  ipc_test.cpp  ipc_test.cpp.bak  loopback_perf_test.cpp  resource_management.cpp  test_fixture.h
tests/integration/: CMakeLists.txt  __init__.py  check_client_contract_failures.py  check_forbidden_dependency.py  check_handoff_surface.py  check_project_docs_failures.py  check_project_state.py  control_plane_acceptance_test.cpp  cq_polling_client_server_test.cpp  cuda_ipc_mr_test.cpp  device_context_client_server_test.cpp  ipc_client_server_test.cpp  loop_worker_cuda_test.cpp  pd_mr_cq_client_server_test.cpp  persistent_copy_test.cpp  qp_client_server_test.cpp  qp_posting_client_server_test.cpp  queue_api_client_server_test.cpp  shared_queue_mapping_test.cpp  test_ugdr_environment.py  test_ugdr_quality.py  test_ugdr_workflow.py
tests/integration/forbidden_dependency/: CMakeLists.txt
tests/integration/forbidden_dependency/docs/architecture/: repository-skeleton.md
tests/integration/forbidden_dependency/src/: api.cpp  test_support.cpp  worker.cpp
tests/integration/forbidden_dependency/tools/: module-boundaries.json
tests/smoke/: CMakeLists.txt
tests/support/: CMakeLists.txt  loop_worker_fixture.cpp  loop_worker_fixture.hpp  mock_gpu_backend.cpp  mock_worker_fixture.cpp  mock_worker_fixture.hpp
tests/unit/: CMakeLists.txt  api_contract_c_test.c  api_contract_test.cpp  completion_queue_test.cpp  device_context_test.cpp  ipc_adapter_test.cpp  ipc_protocol_test.cpp  libibverbs_alignment_test.cpp  local_transport_test.cpp  loop_worker_test.cpp  mock_worker_test.cpp  object_registry_test.cpp  pd_mr_cq_test.cpp  qp_test.cpp  shared_ring_benchmark.cpp  shared_ring_test.cpp  wr_posting_benchmark.cpp  wr_posting_test.cpp
tools/: check_client_contracts.py  check_module_boundaries.py  check_project_docs.py  client-contracts.json  module-boundaries.json  project_roadmap.py  project_state.py  ugdr  workflow-rules.json
tools/ugdr_cli/: __init__.py  bootstrap.py  build.py  environment.py  git_workflow.py  quality.py  result.py  workflow.py
(+36 files in other folders)
